--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,76 @@
-.container {
+.postFormContainer {
+  padding-left: 1em;
+  padding-right: 1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.postFormContainer > label {
+  margin-bottom: 0.5em;
+  font-size: 1.2em;
+  font-weight: lighter;
+  font-style: italic;
+}
+
+.postForm {
+  display: flex;
+  /* width: 100%; */
+}
+
+.postForm > input {
+  width: 100%;
+  border: none;
+  padding-left: 0.7em;
+}
+
+.postForm > button {
+  padding: 0.5em 2em 0.5em 2em;
+  margin-left: 0.5em;
+  color: white;
+  background-color: rgb(11, 140, 11);
+  border: none;
+  border-radius: 5px;
+  transition: 0.5s;
+  font-weight: bolder;
+}
+
+.postForm > button:hover {
+  background-color: rgb(7, 82, 7);
+}
+
+/* EACH POST ITEM */
+
+.post {
+  /* background-color: red; */
+  display: grid;
+  grid-template-columns: 8% auto;
+  padding-left: 1em;
+  padding-top: 1.5em;
+  border-bottom: 1px solid rgb(189, 186, 186);
+}
+
+.imgContainer {
+  background-color: gray;
+  height: 2.4em;
+  width: 2.4em;
+  border-radius: 50%;
+}
+
+.postDetails {
+  /* background-color: red; */
+}
+
+.postDetails > p {
+  margin-top: 0;
+  max-width: 32em;
+}
+
+.postDetails > p > span {
+  color: green;
+  font-style: italic;
+}
+
+/* .container {
   padding: 0 2rem;
 }
 
@@ -126,4 +198,4 @@
   .logo img {
     filter: invert(1);
   }
-}
+} */
