--- a/components/profilecomponent.module.css
+++ b/components/profilecomponent.module.css
@@ -47,3 +47,11 @@
     width: 3.5em;
     border-radius: 50%;
 }
+
+@media screen and (max-width: 980px) {
+    .ProfileDisplay {
+        width: 26%;
+    }
+}
+
+
