--- a/features/posts/postExcerpt.module.css
+++ b/features/posts/postExcerpt.module.css
@@ -40,11 +40,36 @@
 }
 
 .icons > svg {
-    margin-right: 1em;
+    margin-right: 2em;
+    margin-left: 0.5em;
     margin-bottom: 0.5em;
     fill: white;
+    /* fill: red; */ 
 }
 
 .icons > svg:hover {
     fill: red;
+    /* background-color: red */
+    /* color: blue */
+}
+
+@media screen and (max-width: 780px) {
+  .post {
+    /* background-color: red; */
+    display: grid;
+    grid-template-columns: 14% auto;
+  } 
+  .postDetails > p {
+    margin-top: 0;
+    /* max-width: 32em; */
+    max-width: 91%;
+  }
+
+  .postDetails hr {
+    margin-right: 10%;
+    /* width: 85%; */
+    border: 1px solid rgb(94, 92, 92);
+    
+  }
+
 }
