--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -22,9 +22,14 @@
     color: #1bca1b;
 }
 
+.searchIcon {
+    display: none;
+}
+
 .navLinks {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     width: 25em;
     margin-left: auto;
 }
@@ -32,4 +37,47 @@
 .navLinks > p:hover {
     color: rgb(27, 202, 27);
     cursor: pointer;
+}
+
+
+.hamburger {
+    right: 1em;
+    top: 1.2em;
+    position: absolute;
+    display: none;
+    object-fit: contain;
+    z-index: 99;
+    /* background-color: red; */
+}
+
+@media screen and (max-width: 780px) {
+    .navbar {
+        align-items: flex-start;
+        padding-bottom: 0.7em;
+    }
+    .navbar > h1 {
+        margin-top: 0.5em;
+    }
+    .hamburger {
+        display: flex;
+    }
+    .navLinks {
+        /* background-color: red; */
+        z-index: 9;
+        display: flex;
+        flex-direction: column;
+        
+
+        justify-content: center;
+        align-items: center;
+        width: unset;
+        margin-left: auto;
+        padding-right: 1em;
+        padding-top: 2.4em;
+        /* margin-left: unset; */
+    }
+
+    /* #open {
+        background-color: red;
+    } */
 }
