--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -8,3 +8,16 @@
     grid-template-columns: 24% auto 25%;
     margin-top: 5.5em;
 }
+
+@media screen and (max-width: 980px) {
+    .layout {
+        grid-template-columns: 30% auto;
+    }
+}
+
+@media screen and (max-width: 780px) {
+    .layout {
+        grid-template-columns: auto;
+        /* margin-left: 1em; */
+    }
+}
