--- a/styles/singlepost.module.css
+++ b/styles/singlepost.module.css
@@ -1,13 +1,14 @@
 .singlePostPage {
-
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-top: 2em;
 }
 
 .singlePost {
     /* background-color: red; */
     display: grid;
     grid-template-columns: 8% auto;
-    padding-left: 1em;
-    padding-top: 1.5em;
+    /* margin-top: 2em; */
     /* border-bottom: 1px solid rgb(189, 186, 186); */
   }
   
@@ -21,7 +22,7 @@
   
   .postDetails {
     /* background-color: red; */
-    padding-left: 0.8em;
+    padding-left: 1.1em;
 }
   
   .postDetails > p {
@@ -86,4 +87,21 @@
     background-color: rgb(2, 56, 2);
 }
 
+
+@media screen and (max-width: 450px) {
+  .postDetails {
+    /* background-color: red; */
+    padding-left: 2em;
+  }
+  .postDetails > p {
+    margin-top: 0;
+    /* max-width: 32em; */
+    max-width: 95%;
+  }
+  .postDetails hr {
+    margin-right: 5%;
+    /* width: 85%; */
+    border: 1px solid rgb(94, 92, 92);
+  }
+}
 
