--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -67,13 +67,13 @@
         display: flex;
         flex-direction: column;
         
-
         justify-content: center;
         align-items: center;
         width: unset;
         margin-left: auto;
         padding-right: 1em;
         padding-top: 2.4em;
+        padding-left: unset;
         /* margin-left: unset; */
     }
 
