--- a/styles/singlepost.module.css
+++ b/styles/singlepost.module.css
@@ -88,6 +88,12 @@
 }
 
 
+@media screen and (max-width: 780px) {
+    .singlePostPage {
+      padding-top: 0.5em;
+      padding-bottom: 3.5em;
+    }
+}
 @media screen and (max-width: 450px) {
   .postDetails {
     /* background-color: red; */
