--- a/features/posts/postExcerpt.module.css
+++ b/features/posts/postExcerpt.module.css
@@ -8,38 +8,47 @@
     padding-top: 1.5em;
     border-bottom: 1px solid rgb(189, 186, 186);
   }
+.single_post {
+  display: grid;
+  grid-template-columns: 8% auto;
+  /* border-bottom: 1px solid rgb(189, 186, 186); */
+}
   
-  .imgContainer {
-    background-color: gray;
-    height: 2.4em;
-    width: 2.4em;
-    border-radius: 50%;
-    border: 2px solid #06c706;
-  }
-  
+.imgContainer {
+  background-color: gray;
+  height: 2.4em;
+  width: 2.4em;
+  border-radius: 50%;
+  border: 2px solid #06c706;
+}
+
   .postDetails {
     /* background-color: red; */
 }
   
-  .postDetails > p {
+  .singlePostDetails {
+    padding-left: 1.1em;
+  }
+
+  .postDetails > a > p, .singlePostDetails > a > p {
     margin-top: 0;
     /* max-width: 32em; */
     max-width: 85%;
   }
   
-  .postDetails > p > span {
-    color: green;
+  .postDetails > a > p > span, .singlePostDetails > a > p > span {
+    color: rgb(20, 211, 20);
     font-style: italic;
   }
 
-.postDetails hr {
+.postDetails hr, .singlePostDetails hr {
     margin-right: 10%;
     /* width: 85%; */
     border: 1px solid rgb(94, 92, 92);
     
 }
 
-.icons > svg {
+.icons > svg, .icons > a > svg {
     margin-right: 2em;
     margin-left: 0.5em;
     margin-bottom: 0.5em;
@@ -47,7 +56,7 @@
     /* fill: red; */ 
 }
 
-.icons > svg:hover {
+.icons > svg:hover, .icons > a >svg:hover {
     fill: red;
     /* background-color: red */
     /* color: blue */
@@ -59,7 +68,7 @@
     display: grid;
     grid-template-columns: 14% auto;
   } 
-  .postDetails > p {
+  .postDetails > a > p {
     margin-top: 0;
     /* max-width: 32em; */
     max-width: 91%;
@@ -71,5 +80,11 @@
     border: 1px solid rgb(94, 92, 92);
     
   }
+}
 
+@media screen and (max-width: 450px) {
+  .singlePostDetails {
+    /* background-color: red; */
+    padding-left: 2em;
+  }
 }
