--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -38,6 +38,11 @@
   background-color: rgb(7, 82, 7);
 }
 
+.postForm > button:disabled {
+  background-color: rgb(7, 82, 7);
+  opacity: 0.8;
+}
+
 /* EACH POST ITEM */
 
 .post {
