--- a/styles/signup.module.css
+++ b/styles/signup.module.css
@@ -28,6 +28,14 @@
     margin-top: 1em;
     margin-bottom: 0.5em;
     color: rgb(8, 175, 8);
+    display: flex;
+}
+
+.signupPage form > label > span {
+    color: rgb(143, 142, 142);
+    font-style: italic;
+    margin-left: auto;
+    padding-right: 1em;
 }
 
 .textarea {
