--- a/styles/singlepost.module.css
+++ b/styles/singlepost.module.css
@@ -87,6 +87,12 @@
     background-color: rgb(2, 56, 2);
 }
 
+.addComments button:disabled {
+  background-color: rgb(6, 41, 6);
+  opacity: 0.7;
+}
+
+
 
 @media screen and (max-width: 780px) {
     .singlePostPage {
