--- a/components/profilecomponent.module.css
+++ b/components/profilecomponent.module.css
@@ -45,12 +45,12 @@
     color: rgb(7, 222, 7);
 }
 .imgContainer > img {
-    background-color: green;
+    background-color: rgb(31, 29, 29);
     /* position: absolute; */
     margin-left: auto;
     margin-right: auto;
     margin-top: 1em;
-    border: 1px solid white;
+    border: 1px solid #06c706;
     height: 3.5em;
     width: 3.5em;
     border-radius: 50%;
