--- a/styles/profilePage.module.css
+++ b/styles/profilePage.module.css
@@ -14,6 +14,8 @@
     margin-top: 5em;
     margin-left: 1.5em;
     border-radius: 50%;
+    background-color: rgb(31, 29, 29);
+    border: 1px solid #06c706;
     /* border: 1px solid white; */
 }
 
@@ -72,6 +74,7 @@
     .profilePage {
         margin-top: unset;
         padding-bottom: 3.5em;
+        margin-top: -1.4em;
     }
 
     .profilePage > p {
