--- a/styles/globals.css
+++ b/styles/globals.css
@@ -35,6 +35,7 @@ a {
   flex-direction: column;
   text-align: left;
   /* padding-left: 1em; */
+    position: relative;
 }
 
 
@@ -209,7 +210,7 @@ input:-webkit-autofill:active{
   
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
@@ -217,4 +218,4 @@ input:-webkit-autofill:active{
     color: white;
     background: black;
   }
-}
+} */
